<resources>
    <string name="app_name">La Birra dice</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="reppass">Confirmar Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="crearPartida">Crear Partida</string>
    <string name="addAmigos">Añadir Amigo</string>
    <string name="listaAmigos">Lista de Amigos</string>
    <string name="solicitudesAmigos">Solicitudes de Amigos</string>
    <string name="volver">Volver</string>
    <string name="crearPerfil">Crear Perfil</string>
    <string name="desplegarDatos">Desplegar Datos</string>
    <string name="getDatos">Descargar Datos</string>
    <string name="borrarDatos">Borrar Datos</string>
    <string name="facebook_app_id">622174221895686</string>
    <string name="title_activity_menu_principal_nav_drawer">Prueba acti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_error_min_opponent">Necesita añadir al menos un oponente</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


</resources>
