<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="10dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="@drawable/circle_icon_primary_color"
        android:contentDescription="@string/nav_header_desc"
        android:src="@mipmap/ic_launcher"
        app:civ_border_width="2dp"
        app:civ_border_color="#cb393c"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvProfileName"
            android:fontFamily="@font/baloo_thambi"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:textSize="16sp"
            android:id="@+id/tvProfileNick"
            android:layout_width="wrap_content"
            android:textColor="#B9B9B9"
            android:fontFamily="@font/amaranth_italic"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />
    </LinearLayout>


</LinearLayout>
